<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="java.tutorials.zhadyrassyn.com.javatutorials.activities.DataTypesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Primitive Data Types"
            android:textSize="25sp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data_types_part1"
            android:textSize="18sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBlack"
            android:textColor="@color/colorWhite"
            android:text="int gear = 1;"
            android:padding="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data_types_part2"
            android:textSize="18sp"
            android:paddingBottom="10dp"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data_types_part3"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            android:paddingLeft="20dp"
            android:paddingBottom="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data_types_part4"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            android:paddingLeft="20dp"
            android:paddingBottom="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data_types_part5"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            android:paddingLeft="20dp"
            />
    </LinearLayout>
</ScrollView>

